<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/base_padding"
    tools:context=".addauction.AddAuctionActivity">

    <EditText
        android:id="@+id/etStartingBid"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberSigned"
        android:hint="@string/starting_bid"/>

    <EditText
        android:id="@+id/etBuyoutPrice"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/etStartingBid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberSigned"
        android:hint="@string/buyout_price"/>

    <TextView
        android:id="@+id/tvAuctionLength"
        android:layout_marginTop="12dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etBuyoutPrice"
        android:text="@string/auction_length"/>

    <Spinner
        android:id="@+id/spAuctionLength"
        app:layout_constraintTop_toBottomOf="@id/tvAuctionLength"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/auctionLengths"/>

    <Button
        android:id="@+id/btnCreate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spAuctionLength"
        android:text="@string/create_auction"/>

</androidx.constraintlayout.widget.ConstraintLayout>